012_27072026_workload_replicaset_deployment_service_ingresscontroller-yml/pod-jumpserver.yml
apiVersion: v1
kind: Pod
metadata:
  name: jumpserverpod
  labels:
    browser: mozila
 

spec:

  containers:
  - name: mozilafirefox
    image: jlesage/firefox
    ports:
    - containerPort: 5800
