012_27072026_workload_replicaset_deployment_service_ingresscontroller-yml/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ui-ingress
  namespace: flipkart-dev
  labels:
    app: app1-ui
    component: frontend
    environment: dev
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-ui-service
            port:
              number: 8080
          
      - path: /app2
        pathType: Exact
        backend:
          service:
            name: app2-ui-service
            port:
              number: 8000
